license under GPL-3.0-or-later

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "name": "WofWca",
     "email": "wofwca@protonmail.com"
   },
-  "license": "UNLICENSED",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/WofWca/minimize-webext-i18n-json/issues"
   },
